adding easy codes

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
             <button id="code-submit" onclick="updateVideo()">Enter Code</button>
         </div>
         <script src="script.js"></script>
+        <div id="saved-codes">
+            Previously used codes:
+        </div>
 	</body>
 </html>
