--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<body>
         <h1 id="title">Cybersecurity Escape Room</h1>
         <div id="video-player">
-            <video width="320" height="240" id="current-video" controls>
-                <source src="test.mp4" type="video/mp4">
-            </video>
+            <iframe src="https://drive.google.com/file/d/1TyCBhFd2q5T4DuVUm-Tgrit4zsYD_SW3/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
         <div>
             <input id="code-entry" type="text">
