--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
         <h1 id="title">Cybersecurity Escape Room</h1>
         <div id="video-player">
-            <iframe src="https://drive.google.com/file/d/1TyCBhFd2q5T4DuVUm-Tgrit4zsYD_SW3/preview" width="640" height="480" allow="autoplay"></iframe>
+            <iframe id="current-video" src="https://drive.google.com/file/d/1D5eYsmRECX4tgV1y_SX7RGqAfRy75BR1/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
         <div>
             <input id="code-entry" type="text">
