--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
         <h1 id="title">Cybersecurity Escape Room</h1>
         <div id="video-player">
-            <iframe id="current-video" src="https://drive.google.com/file/d/1NSdzGPs52Y-cucg9K9biu0l_4qZJ6h8h/preview" width="640" height="480" allow="autoplay"></iframe>
+            <iframe id="current-video" src="https://drive.google.com/file/d/1Tqoq4XAELbKyUk8mfEYlByda3yjlZ8VX/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
         <div>
             <input id="code-entry" type="text">
@@ -20,7 +20,7 @@
         </div>
         <script src="script.js"></script>
         <div id="saved-codes">
-            Previously used codes:
+            Previously successful codes:
         </div>
 	</body>
 </html>
