--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -7,20 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>      
-	<body>
+	<body onload="addDefault()">
         <h1 id="title">Cybersecurity Escape Room</h1>
+        <div id="clock">40:00</div>
         <div id="video-player">
             <iframe id="current-video" src="https://drive.google.com/file/d/1Tqoq4XAELbKyUk8mfEYlByda3yjlZ8VX/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
-        <div>
+        <div id="code-entry-container">
+            Enter password: 
             <input id="code-entry" type="text">
         </div>
         <div>
-            <button id="code-submit" onclick="updateVideo()">Enter Code</button>
+            <button id="code-submit" onclick="updateVideo(currentCode())">Enter Code</button>
         </div>
         <script src="script.js"></script>
         <div id="saved-codes">
-            Previously successful codes:
+            View previous videos:
         </div>
 	</body>
 </html>
