adding sound effects and result screen

--- a/index.html
+++ b/index.html
@@ -31,22 +31,48 @@
                 <h3>Good luck, agents.</h3>
             </div>
         </div>
-        <div id="main" style="visibility:hidden">
+        <div id="main" style="display:none">
             <div id="clock">40:00</div>
             <div id="video-player">
-                <iframe id="current-video" src="https://drive.google.com/file/d/1Tqoq4XAELbKyUk8mfEYlByda3yjlZ8VX/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe id="current-video" src="https://drive.google.com/file/d/1Tqoq4XAELbKyUk8mfEYlByda3yjlZ8VX/preview" width="640" height="480" allow="autoplay" onended="showVictoryScreen()"></iframe>
             </div>
-            <div id="code-entry-container" class="terminal">
-                Enter password: 
-                <input id="code-entry" class="terminal-text" type="text">
+            <div id="code-controls">
+                <div id="code-entry-container" class="terminal">
+                    Enter password: 
+                    <input id="code-entry" class="terminal-text" type="text">
+                </div>
+                <div>
+                    <button id="code-submit" class="main-button" onclick="updateVideo(currentCode())">Enter Code</button>
+                </div>
+                <div id="saved-codes">
+                    View previous videos:
+                </div>
             </div>
-            <div>
-                <button id="code-submit" class="main-button" onclick="updateVideo(currentCode())">Enter Code</button>
+            <div id="mission-controls" style="display:none">
+                <div>
+                    <button id="view-results" class="main-button" onclick="showResultScreen()">View Results</button>
+                </div>
             </div>
-            <script src="script.js"></script>
-            <div id="saved-codes">
-                View previous videos:
+            <div id="mission-controls-l" style="display:none">
+                <div>
+                    <button id="view-results-l" class="main-button" onclick="showLossScreen()">View Results</button>
+                </div>
             </div>
         </div>
+        <div id="result" style="display:none">
+            <div id="result-screen">
+                <h1 id="result-title">Mission Report</h2>
+                <h2 id="team-text">Team: {team}</h3>
+                <h2 id="time-text">Final Time: {time}</h3>
+                <div id="result-container">
+                    Result: 
+                    <h2 id="result-text">Success</h3>
+                </div>
+            </div>
+            <div>
+                <button id="return-button" class="main-button" onclick="returnToMain()">Back</button>
+            </div>
+        </div>
+        <script src="script.js"></script>
 	</body>
 </html>
