adding hash link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <div id="video-player">
                 <iframe id="current-video" src="https://drive.google.com/file/d/1peqO1t_ldzy9vXB78e3mqyNcAvHRqPro/preview" width="640" height="480" allow="autoplay" onended="showVictoryScreen()"></iframe>
             </div>
+            <div id="hash-link" style="display:none">
+                <div>ENTER THE HASH '0bf63c462a3297f3a2aed67682ca11cb' INTO THE SITE BELOW:</div>
+                <a href="https://crackstation.net/" target="_blank">Hash Cracking Site</a>
+            </div>
             <div id="code-controls">
                 <div id="code-entry-container" class="terminal">
                     Enter password: 
